[package]
name = "configserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } 
serde_yaml = "0.9"
git2 = "0.15"
tempfile = "3.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
simple-error = "0.2"
actix-web = "4"